# TinyDNS

./: CMakeLists.txt  README.md
src/: main.cpp  resolver.hpp  server.hpp
src/protocol/: codec.hpp  header.hpp  label.hpp  message.hpp  question.hpp  resource_record.hpp
tests/: CMakeLists.txt  test_forwarding.cpp  test_resource_record.cpp  test_response.cpp
